# swagger-output.json
@@ -304,6 +304,42 @@
         }
       }
     },
+    "/api/v1/auth/admin-login": {
+      "post": {
+        "tags": [
+          "Authentication"
+        ],
+        "description": "Admin login",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/api/v1/sports/health": {
       "get": {
         "tags": [
